--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 VITE_MODE_TYPE=2
-VITE_LANGUAGE=en
-VITE_VOICE_ID=Xb7hH8MSUJpSbSDYk0k2
+VITE_LANGUAGE=zh
+VITE_VOICE_ID=69365315003a8848fff1545e
 VITE_BACKGROUND_URL=
 VITE_VOICE_URL=
-VITE_AVATAR_ID=dvp_Tristan_cloth2_1080P
-VITE_AVATAR_VIDEO_URL=https://static.website-files.org/assets/avatar/avatar/streaming_avatar/tristan_10s_silence.mp4 
+VITE_AVATAR_ID=Ydgl3krdKDIruU6QiSxS6
