--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_MODE_TYPE=2
 VITE_LANGUAGE=zh
 VITE_VOICE_ID=69365315003a8848fff1545e
-VITE_BACKGROUND_URL=
-VITE_VOICE_URL=
+VITE_BACKGROUND_URL=https://akool.com/share/RVCfbAhCF9
+VITE_VOICE_URL=https://akool.com/share/JZnV9umqir
 VITE_AVATAR_ID=Ydgl3krdKDIruU6QiSxS6
